fix: navbar ui mobile

--- a/BlazorSound/Pages/UploadComponent.razor
+++ b/BlazorSound/Pages/UploadComponent.razor
@@ -4,7 +4,7 @@
 @inject NavigationManager Navigation
 
 <h3>Upload MP3 File</h3>
-<MusicPlayer></MusicPlayer>
+@* <MusicPlayer></MusicPlayer> *@
 @if (uploadSuccessMessage != null)
 {
     <div class="alert alert-info">
