--- a/BlazorSound/Shared/InfoMusic.razor
+++ b/BlazorSound/Shared/InfoMusic.razor
@@ -1,7 +1,7 @@
 ﻿<div style="margin-bottom:40px">
 
 <div style="height:50px;margin:10px 0px 20px 10px" class="d-flex align-items-center">
-        <span class="text-white">Đánh đổi</span>
+        <span >Đánh đổi</span>
     </div>
 <div style="max-height:calc(90vh - 80px);height: 90vh; overflow-y: auto;margin-bottom:60px;">
         <h2>tên playlist</h2>
@@ -35,7 +35,7 @@
             </div>
         </div>
             <div style="margin:10px 0px 20px 10px">
-                <span class="text-white">Đánh đổi</span>
+                <span>Đánh đổi</span>
             </div>
            
         </div>
