--- a/BlazorSound/Pages/_Layout.cshtml
+++ b/BlazorSound/Pages/_Layout.cshtml
@@ -22,9 +22,17 @@
             padding: 0;
         }
     </style>
+    <style>
+        .dark-mode {
+            background-color: rgb(12, 12, 23);
+            color: white;
+        }
+    </style>
+
 </head>
 
-<body>
+<body class="dark-mode">
+         
     @RenderBody()
 
     <div id="blazor-error-ui">
@@ -39,5 +47,6 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="_framework/blazor.server.js"></script>
+   
 </body>
 </html>
