--- a/BlazorSound/Shared/NavMenu.razor
+++ b/BlazorSound/Shared/NavMenu.razor
@@ -6,34 +6,29 @@
         </button>
     </div>
 </div>
-
+<style>
+    i{
+        margin-left:10px;
+    }
+</style>
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <i class="fa-solid fa-house fs-6 me-3"></i>Home
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="upload-file">
-                <span class="oi oi-plus" aria-hidden="true"></span> upload-file
+                <i class="fa-solid fa-cloud-arrow-up fs-6 me-3"></i>  upload-file
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="music-player">
-                <span class="oi oi-plus" aria-hidden="true"></span> library
+                <i class="fa-solid fa-headphones fs-6 me-3"></i> library
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
+      
     </nav>
 </div>
 
