feat: dark and light mode theme

--- a/BlazorSound/Pages/_Layout.cshtml
+++ b/BlazorSound/Pages/_Layout.cshtml
@@ -27,14 +27,18 @@
             background-color: rgb(12, 12, 23);
             color: white;
         }
-    </style>
+
+        .light-mode {
+            background-color:white;
+            color: black;
+        }
+        </style>
 
 </head>
 
 <body class="dark-mode">
          
     @RenderBody()
-
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
             An error has occurred. This application may no longer respond until reloaded.
