--- a/BlazorSound/Shared/InfoMusic.razor
+++ b/BlazorSound/Shared/InfoMusic.razor
@@ -1,9 +1,9 @@
-﻿<div style="margin-bottom:40px">
+﻿<div style="border-radius:6px;margin-bottom:100px;box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;">
 
 <div style="height:50px;margin:10px 0px 20px 10px" class="d-flex align-items-center">
         <span >Đánh đổi</span>
     </div>
-<div style="max-height:calc(90vh - 80px);height: 90vh; overflow-y: auto;margin-bottom:60px;">
+<div style="max-height:calc(90vh - 90px);height: 90vh; overflow-y: auto;margin-bottom:60px;">
         <h2>tên playlist</h2>
         <div class="d-flex justify-content-center align-items-center">
             <img style="margin:10px;width:90%; border-radius:10px;" src="https://i.pinimg.com/736x/b9/c4/7e/b9c47ef70bff06613d397abfce02c6e7.jpg" />
@@ -34,10 +34,6 @@
                 <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
-            <div style="margin:10px 0px 20px 10px">
-                <span>Đánh đổi</span>
-            </div>
-           
         </div>
     </div>
 </div>
