--- a/BlazorSound/Pages/_Host.cshtml
+++ b/BlazorSound/Pages/_Host.cshtml
@@ -3,10 +3,36 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_Layout";
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 }
 
 <component type="typeof(App)" render-mode="ServerPrerendered" />
 <script src="~/js/audio.js"></script>
 <script src="~/js/musicplayerinterop.js"></script>
+<script>
+    window.switchTheme = function () {
+        document.body.classList.toggle('dark-mode');
+        if (document.body.classList.contains('dark-mode')) {
+            localStorage.setItem('dark-mode', 'true');
+            document.body.classList.add('dark-mode');
+            document.body.classList.remove('light-mode');
+        } else {
+            localStorage.setItem('dark-mode', 'false');
+            document.body.classList.add('light-mode');
+            document.body.classList.remove('dark-mode');
+        }
+    };
+    window.initializeTheme = function () {
+        const darkMode = localStorage.getItem('dark-mode');
+        if (darkMode == 'true') {
+            document.body.classList.add('dark-mode');
+        }
+        else {
+            document.body.classList.add('light-mode');
+        }
+    };
+
+    // Call initializeTheme when the script loads
+    window.initializeTheme();
+</script>
