style: ui sportify home

--- a/BlazorSound/Pages/_Layout.cshtml
+++ b/BlazorSound/Pages/_Layout.cshtml
@@ -15,8 +15,12 @@
     <link href="BlazorSound.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mali:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <style>
         * {
+            font-family:'Mali';
             box-sizing:border-box;
             margin:0;
             padding: 0;
@@ -36,7 +40,7 @@
 
 </head>
 
-<body class="dark-mode">
+<body >
          
     @RenderBody()
     <div id="blazor-error-ui">
