--- a/BlazorSound/Shared/InfoMusic.razor
+++ b/BlazorSound/Shared/InfoMusic.razor
@@ -1,39 +1,35 @@
-﻿<div style="border-radius:6px;margin-bottom:100px;box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;">
+﻿<div style="border-radius:6px;margin-bottom:100px;border-top: 2px solid gray;border-right: 2px solid gray;border-left: 2px solid gray;margin-top:6px">
 
-<div style="height:50px;margin:10px 0px 20px 10px" class="d-flex align-items-center">
-        <span >Đánh đổi</span>
+<div style="height:50px;margin:10px 0px 20px 20px" class="d-flex align-items-end">
+        <span style="font-weight:600;font-size:18px">Đánh đổi</span>
     </div>
 <div style="max-height:calc(90vh - 90px);height: 90vh; overflow-y: auto;margin-bottom:60px;">
-        <h2>tên playlist</h2>
         <div class="d-flex justify-content-center align-items-center">
-            <img style="margin:10px;width:90%; border-radius:10px;" src="https://i.pinimg.com/736x/b9/c4/7e/b9c47ef70bff06613d397abfce02c6e7.jpg" />
+            <img style="margin:10px;width:90%; height:auto; border-radius:4px;" src="https://preview.redd.it/why-do-a-lot-of-people-hate-obito-v0-hrcbo17bz11c1.jpg?width=1080&crop=smart&auto=webp&s=0d150586f1806f1decf65f7f61be6e042319e143" />
         </div>
-        <h2>tên baì nhạc</h2>
-
-        <div style="position:relative;">
-            <div style="position:absolute; top:10px; left:20px">
-                <h6>giới thiệu nghệ sĩ</h6>
-            </div>
-            <div class="d-flex justify-content-center align-items-center">
-                <img style="margin:10px;width:90%; border-radius:10px;" src="https://i.pinimg.com/736x/b9/c4/7e/b9c47ef70bff06613d397abfce02c6e7.jpg" />
-            </div>
-              <div>
-                <img src="https://i.pinimg.com/736x/b9/c4/7e/b9c47ef70bff06613d397abfce02c6e7.jpg" />
-            </div>
-            <div>
-                <img src="https://i.pinimg.com/736x/b9/c4/7e/b9c47ef70bff06613d397abfce02c6e7.jpg" />
-            </div>
-            <div>
-                <img src="https://i.pinimg.com/736x/b9/c4/7e/b9c47ef70bff06613d397abfce02c6e7.jpg" />
-            </div>
-        <div class="card">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
+        <div style="height:50px;margin:10px 0px 6px 20px" class="d-flex flex-column">
+            <h4 style="font-weight:600;">Champion</h4>
+            <span><u>Obito</u>, Minh Tài</span>
         </div>
+        <div style="position:relative;margin-top:14px">
+          
+            <div  class="d-flex justify-content-center align-items-center;">
+                <div class="card" style="border:2px solid;color:white;background-color:transparent;width:90%">
+                    <div style="position:absolute; top:17px; left:25px">
+                        <h6 class="text-white">giới thiệu nghệ sĩ</h6>
+                    </div>
+                    <img class="card-img-top" style="width:100%;height:auto;" src="https://event.mediacdn.vn/thumb_w/1200/eventcore/cms/userimages/55/202401030043006102.jpg" />
+                    <div class="card-body">
+                        <h5 class="card-title font-bold">Obito</h5>
+                        <p class="card-text">
+                            1.138.838 Người nghe Hàng tháng
+                        </p>
+                        <p class="card-text">
+                            Obito (youngtobieedasick) is a Vietnamese artist, based in Ho Chi Minh City.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
