--- a/BlazorSound/Pages/Index.razor
+++ b/BlazorSound/Pages/Index.razor
@@ -1,3 +1,36 @@
 ﻿@page "/"
 
-<h1 class="font-bold text-gray hover:bg-gray-700 hover:text-white" >dasd</h1>
+<div style="padding:0;border-radius:4px;border:2px solid gray;">
+    <div class="d-flex justify-content-start align-items-center" style="border-bottom:1px solid;width:100%; height:200px;">
+        <div>
+            <img style="margin-left:8px;border-radius:3px;width:150px;height:150px" src="https://photo-resize-zmp3.zadn.vn/w600_r1x1_jpeg/cover/7/7/c/7/77c7630469295fb4bbb7459bdd7a0c3b.jpg" />
+        </div>
+        <div style="margin-left:14px;padding-top:40px">
+            <span class="text-sm">
+                Album
+            </span>
+            <h1 style="font-weight:1000">Đánh Đổi</h1>
+            <div style="padding-top:15px" class="d-flex flex-row justify-content-start align-items-center">
+                <img style="border-radius:50%; width:20px; height:20px" src="https://preview.redd.it/fhzzupqdwbib1.png?width=640&crop=smart&auto=webp&s=3a77f9b3e3def55b4f9365dac30b1e56af4f923b" />
+                <span style="margin-left:5px;font-size:12px;font-weight:500">Obito - 2023 - 20 bài hát - 56 phút 24 giây</span>
+            </div>
+        </div>
+
+    </div>
+    <div class="d-flex justify-content-between align-items-center">
+        <div class="d-flex justify-content-start align-items-center">
+            <button style="margin:10px;background-color:#1ED760;border-radius:50%;width:40px;height:40px"><i style="margin-right:8px" class="fa-solid fa-play"></i></button>
+            <button style="margin-left:10px;border:2px solid;border-radius:50%;width:30px;height:30px">
+                <i style="margin-left:0px;font-size:16px" class="fa-solid fa-plus"></i>
+            </button>
+            <button style="margin-left:15px;border-radius:50%;width:30px;height:30px">
+                <i style="margin-left:0px;font-weight:700" class="fa-solid fa-ellipsis"></i>
+            </button>
+        </div>
+       <div>
+            <span style="font-size:14px;margin-right:10px;font-weight:500" class="justify-content-end">danh sách <i style="margin-left:0px" class="fa-solid fa-list-ul"></i></span>
+       </div>
+    </div>
+
+
+</div>
