--- a/BlazorSound/Pages/_Host.cshtml
+++ b/BlazorSound/Pages/_Host.cshtml
@@ -12,27 +12,26 @@
 <script src="~/js/musicplayerinterop.js"></script>
 <script>
     window.switchTheme = function () {
-        document.body.classList.toggle('dark-mode');
-        if (document.body.classList.contains('dark-mode')) {
-            localStorage.setItem('dark-mode', 'true');
-            document.body.classList.add('dark-mode');
-            document.body.classList.remove('light-mode');
-        } else {
-            localStorage.setItem('dark-mode', 'false');
-            document.body.classList.add('light-mode');
+        var isDarkMode = document.body.classList.contains('dark-mode');
+
+        if (isDarkMode) {
             document.body.classList.remove('dark-mode');
-        }
-    };
-    window.initializeTheme = function () {
-        const darkMode = localStorage.getItem('dark-mode');
-        if (darkMode == 'true') {
-            document.body.classList.add('dark-mode');
-        }
-        else {
             document.body.classList.add('light-mode');
+            localStorage.setItem('dark-mode', 'false');
+            return false;
+        } else {
+            document.body.classList.remove('light-mode');
+            document.body.classList.add('dark-mode');
+            localStorage.setItem('dark-mode', 'true');
+            return true;
         }
     };
 
-    // Call initializeTheme when the script loads
+    window.initializeTheme = function () {
+        const darkMode = localStorage.getItem('dark-mode') === 'true';
+        document.body.classList.add(darkMode ? 'dark-mode' : 'light-mode');
+        return darkMode;
+    };
+
     window.initializeTheme();
 </script>
