--- a/BlazorSound/Shared/NavMenu.razor
+++ b/BlazorSound/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">BlazorSound</a>
+        <a class="navbar-brand" style="color:black" href="">BlazorSound</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
